deployment/stacks/application/base/template/proxy/uec-dos-api-cs-proxy-alb-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: uec-dos-api-cs-proxy
  name: uec-dos-api-cs-proxy
  namespace: K8S_APP_NAMESPACE_TO_REPLACE
spec:
  type: NodePort
  ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: 443
  selector:
    app: uec-dos-api-cs-proxy

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: uec-dos-api-cs-proxy
  namespace: K8S_APP_NAMESPACE_TO_REPLACE
  labels:
    app: uec-dos-api-cs-proxy
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
    alb.ingress.kubernetes.io/ssl-policy: "ELBSecurityPolicy-TLS-1-2-2017-01"
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "30"
    alb.ingress.kubernetes.io/healthcheck-path: /
#alb.ingress.kubernetes.io/healthcheck-port: "443"
#alb.ingress.kubernetes.io/healthcheck-protocol: HTTPS
#alb.ingress.kubernetes.io/tags
    alb.ingress.kubernetes.io/waf-acl-id: dfae6ec3-aa05-428f-a022-5fd85f646009
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-2:730319765130:certificate/c0718115-4e22-4f48-a4aa-8c16ea86c5e6
    #service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
    alb.ingress.kubernetes.io/inbound-cidrs: 194.101.83.23/24, 51.140.225.142/24, 81.155.242.0/24, 82.28.50.244/32 # DS
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: uec-dos-api-cs-proxy
              servicePort: 443
